tdf#104105: fix Vcl lifecycle in CondFormat (reportdesign)

Avoid this error:
Window ( 7VclVBox()) with live children destroyed:  N5rptui9ConditionE() * n

by calling disposeAndClear on each element of m_aConditions
m_aConditions is Conditions type
Conditions type is ::std::vector< VclPtr<Condition> >
See http://opengrok.libreoffice.org/xref/core/reportdesign/source/ui/inc/CondFormat.hxx#70

Change-Id: Ie99f8cdb5acd787892237787525d79f3231689db
Reviewed-on: https://gerrit.libreoffice.org/31775
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>